fixed the height prob on mobile views

--- a/src/components/app.scss
+++ b/src/components/app.scss
@@ -113,19 +113,19 @@ header {
             cursor: pointer;
         }
         .dropdown {
-            // border-right: 0.2vw solid #fff;
+            // border: solid #ff0000 ;
             color: #fda136;
-            // cursor: pointer;
+            height: auto;
             position: relative;
 
             .dropbtn {
-                border: 0;
-                outline: none;
-                font-family: "NizarCoconKurdish";
                 background-color: inherit;
-                font-weight: bold;
+                border: 0;
                 color: #fff;
+                font-family: "NizarCoconKurdish";
                 font-size: 1.3vw;
+                font-weight: bold;
+                outline: none;
                 padding-bottom: 3.5vh;
             }
 
@@ -135,31 +135,30 @@ header {
 
             .dropdown-content {
                 background-color: #fff !important;
-                border: solid #fda136 1px;
+                border: solid #fda136 2px;
                 border-top: none;
                 border-radius: 5px;
                 box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
                 display: none;
                 height: auto;
-                left: -17vh;
-                line-height: 3vw;
-                opacity: 1 !important;
-                right: 0;
-                top: 5vh;
+                opacity: 1;
                 position: absolute;
-                padding: 1vw 2vw;
+                right: 5%;
+                top: 150%;
+                width: 150%;
 
                 a {
-                    z-index: 999 !important;
-                    border: none !important;
-                    border-right: 0.2vw solid #fda136 !important ;
+                    // border: solid !important;
+                    border-right: 3px solid #fda136 !important ;
                     color: #fda136 !important;
                     display: block;
                     font-size: 1.5vmax;
-                    letter-spacing: 0;
-                    margin: 0.5vw 0vw;
+                    margin: 5% 5%;
+                    outline: none;
+                    padding: 5%;
                     text-decoration: none;
                     text-align: center;
+                    width: 80%;
 
                     &:hover {
                         background-color: #fda136 !important;
@@ -182,6 +181,7 @@ header {
 
     .middle {
         position: relative;
+        height: 100%;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
@@ -219,7 +219,6 @@ header {
 
     .slide {
         position: relative;
-        height: 100vh;
         transition: 0.6s;
         width: calc(100% / 6);
 
@@ -347,9 +346,9 @@ header {
         // margin-top: -3vmax;
     }
     a {
-        background-color: #a2238e;
+        // background-color: #a2238e;
         border-radius: 5px;
-        box-shadow: 1px 1px 10px #00000057;
+        // box-shadow: 1px 1px 10px #00000057;
         bottom: 5%;
         color: #fff;
         left: 45%;
@@ -358,6 +357,24 @@ header {
         text-align: center;
         text-decoration: none;
         width: 11%;
+        $red: #a2238e;
+        $white: #fff;
+
+        background: lighten($red, 3%);
+        border: 1px solid darken($red, 4%);
+        box-shadow: 2px 2px 5px darken(#000, 2%);
+
+        transition: all 150ms linear;
+
+        &:hover {
+            background: darken($red, 1.5%);
+            // border: 1px solid rgba(#000, 0.05);
+            box-shadow: 1px 1px 2px rgba(#fff, 0.2);
+            color: lighten($red, 50%);
+            text-decoration: none;
+            text-shadow: -1px -1px 0 darken($red, 9.5%);
+            transition: all 250ms linear;
+        }
     }
 }
 
